--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,8 +47,8 @@ dependencies:
   http: ^0.13.5
   syncfusion_flutter_calendar: ^20.4.43
   syncfusion_localizations: ^20.4.43
-  firebase_messaging: ^14.2.1
-  firebase_core: ^2.4.1
+  flutter_local_notifications: ^13.0.0
+  flutter_native_timezone: ^2.0.0
   flutter_localizations:
     sdk: flutter
 
