--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,9 +73,9 @@ flutter_native_splash:
     color: "#FFFFFF"
 
 flutter_icons:
-  android: "launcher_icon"
+  android: false
   ios: true
-  image_path: "assets/images/icon_logo_01.png"
+  image_path: "assets/images/icon_logo_02.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
