--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.0.6+6
+version: 0.0.10+9
 
 environment:
   sdk: '>=2.18.5 <3.0.0'
@@ -47,6 +47,9 @@ dependencies:
   http: ^0.13.5
   syncfusion_flutter_calendar: ^20.4.43
   syncfusion_localizations: ^20.4.43
+  firebase_messaging: ^14.2.1
+  firebase_core: ^2.4.1
+  youtube_player_iframe: ^4.0.4
   flutter_local_notifications: ^13.0.0
   flutter_native_timezone: ^2.0.0
   flutter_localizations:
